1.3.0-alpha.7 - config ui changes